<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".resultActivity">

    <TextView
            android:text="@string/cont_view_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/view_result"
            android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"/>
    <TextView
            android:text="@string/cont_view_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txt_answer"
            android:textSize="34sp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/view_result"
            android:layout_marginTop="24dp" app:layout_constraintHorizontal_bias="0.496"
            android:textColor="@color/purple_500"/>
    <Button
            android:text="@string/cont_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_back"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.895"
            android:layout_marginBottom="30dp" android:layout_marginEnd="20dp" android:background="@color/purple_500"
            android:onClick="Back"/>
</androidx.constraintlayout.widget.ConstraintLayout>